# replybuddy

./: README.md  package-lock.json
backend/: .env.example  .gitignore  app.py  main.py  pyproject.toml  requirements.txt  test.py
backend/src/GoogleSheet/: google_sheet.py
backend/src/llm_config/: __init__.py  config.py  email_tips.md  guid.md
backend/src/services/: __init__.py  email_service.py  find_email_service.py  llm_query_service.py  message_service.py  upwork_proposal_service.py  yc_service.py
backend/src/utils/: pydantic_schema.py
components/: ChatSidebar.tsx  CheckServer.tsx
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatInterface.tsx  ChatSidebar.tsx  CheckServer.tsx  ModeToggle.tsx  server-status-badge.tsx
frontend/components/chat/: ActionButton.tsx  AnimatedAIChat.tsx  ChatInput.tsx  CommandPalette.tsx  InitialScreen.tsx  MessageList.tsx  TypingDots.tsx  config.ts  types.ts
frontend/components/chat/hooks/: useAutoResizeTextarea.ts
